# tinyws

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  notes.txt
examples/: example.c
include/: base64.h  divide.h  sha1.h
src/: base64.c  divide.c  handshake.c  sha1.c  tws.c
tws/: tws.h
